# pnp_server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
files/: fs.js  index.html  mq_js_bundle.js  params.js  pnp_client.wasm
files/games/testgame/: DefaultScene.json  Test_Scene.json
files/root/: index.html  mq_js_bundle.js  params.js  pnp_client.wasm
files/users/: sessions.json  testuser.json
pnp_client/: Cargo.toml
pnp_client/src/: api_json.rs  camera.rs  diff_json.rs  fs.rs  game_picker.rs  json.rs  lib.rs  main.rs  params.rs  scene.rs  scene_json.rs  tests.rs  token.rs  types.rs  ui.rs  user.rs
pnp_client/src/json/: api_json.rs  diff_json.rs  scene_json.rs
pnp_client_/src/: scene.rs  scene_json.rs
src/: api.rs  diff.rs  main.rs  server.rs  server_jsons.rs  user.rs
src/api/: files.rs  games.rs  users.rs
