[package]
name = "pnp_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sapp-jsutils = "0.1.5"
lazy_static = "1.4.0"

[lib]
name = "pnp_client"
path = "src/lib.rs"